# pts_3b

./: adf_calculation_steps.md  codebase_analysis.md  package.json  symbols.csv  tailwind.config.js
adf_test/: Cargo.toml
adf_test/ols_wasm_module/: Cargo.toml
adf_test/ols_wasm_module/src/: lib.rs
adf_test/src/: lib.rs
app/: globals.css  layout.tsx
components/: Button.tsx  Card.tsx  Footer.tsx  Input.tsx  Layout.tsx  Select.tsx  StockTable.js  StockTable.tsx
lib/: indexedDB.js
ols_wasm_module/: Cargo.toml
ols_wasm_module/src/: lib.rs
pages/: _app.tsx  backtest-euclidean.tsx  backtest-kalman.tsx  backtest-spread.js  backtest-spread.tsx  backtest.js  backtest.tsx  download.tsx  index.js  index.tsx  pair-analyzer.tsx  pricing.tsx  scanner.tsx  stocks.js  stocks.tsx  watchlists.tsx
pages/api/: stocks.js
public/utils/: calculations.js
public/wasm/: adf_test.d.ts  adf_test.js  adf_test_bg.wasm  adf_test_bg.wasm.d.ts  package.json
public/wasm/ols_module/: ols_wasm_module.d.ts  ols_wasm_module.js  ols_wasm_module_bg.wasm  ols_wasm_module_bg.wasm.d.ts  package.json
public/workers/: calculations-worker.js
styles/: globals.css
utils/: calculations.js
