[package]
name = "adf_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92" # Keep your current version
js-sys = "0.3"         # ADD THIS LINE
# Add any other Rust dependencies you might need for the full ADF calculation
# For example, if you implement the full ADF test in Rust, you might need:
# ndarray = { version = "0.15", features = ["blas"] }
# linfa-linear = "0.6" # For linear regression

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s" # Optimize for size
