[package]
name = "ols_wasm_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Crucial for WASM output

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] } # Pure-Rust linear algebra library
# Removed ndarray and ndarray-linalg as nalgebra will handle matrix operations
